data/derived/fa15/progs/unify/prog1164.ml.out
Characters 77-78:
  then padZero 0::l1 l2
               ^
Error: This expression has type int but an expression was expected of type
         'a list
